fix paragraph too long

--- a/assets/css/post.css
+++ b/assets/css/post.css
@@ -122,7 +122,7 @@
     overflow-x: auto
   }
 
-  article blockquote {
+  article blockquote,article p {
     overflow-wrap: break-word;
   }
 
